[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["tpl-86 <tron-050686@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
